@@ -1,4 +1,4 @@
-.\" $NetBSD: gpio.4,v 1.6 2008/01/09 16:15:41 xtraeme Exp $
+.\" $NetBSD: gpio.4,v 1.7 2008/04/29 14:07:36 cegger Exp $
 .\"	$OpenBSD: gpio.4,v 1.5 2004/11/23 09:39:29 reyk Exp $
 .\"
 .\" Copyright (c) 2004 Alexander Yurchenko <grange@openbsd.org>
@@ -26,6 +26,7 @@
 .Cd "gpio* at gcscpcib?"
 .Cd "gpio* at gscpcib?"
 .Cd "gpio* at nsclpcsio?"
+.Cd "gpio* at ppbus?"
 .Pp
 .In sys/types.h
 .In sys/gpio.h
